@@ -51,7 +51,7 @@ public class CharLit_c extends NumLit_c implements CharLit
     }
 
     public Object constantValue() {
-      return new Character((char) value);
+      return Character.valueOf((char) value);
     }
     public Node copy(NodeFactory nf) {
         return nf.CharLit(this.position, (char)this.value);
